RESOLVED FIXED113618
[WK2] --no-backing-store build fails because FloatPoint is not declared
https://bugs.webkit.org/show_bug.cgi?id=113618
Summary [WK2] --no-backing-store build fails because FloatPoint is not declared
Ed Bartosh
Reported 2013-03-29 16:05:53 PDT
Here is the error: In file included from /home/ed/git/wk/WebKit/Source/WebKit2/PluginProcess/PluginControllerProxy.h:32:0, from /home/ed/git/wk/WebKit/Source/WebKit2/PluginProcess/PluginControllerProxy.cpp:27: /home/ed/git/wk/WebKit/Source/WebKit2/WebProcess/Plugins/Plugin.h:270:58: error: `FloatPoint' in namespace `WebCore' does not name a type /home/ed/git/wk/WebKit/Source/WebKit2/WebProcess/Plugins/Plugin.h:270:77: error: ISO C++ forbids declaration of `parameter' with no type [-fpermissive] make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/PluginProcess/PluginControllerProxy.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch (1.15 KB, patch)
2013-03-29 16:20 PDT, Ed Bartosh
ap: review+
Patch (1.16 KB, patch)
2013-04-04 13:55 PDT, Ed Bartosh
no flags
Patch (1.14 KB, patch)
2013-04-05 15:26 PDT, Ed Bartosh
no flags
Ed Bartosh
Comment 1 2013-03-29 16:20:04 PDT
Ed Bartosh
Comment 2 2013-04-01 01:05:28 PDT
Reverting back to UNCONFIRMED after reading https://bugs.webkit.org/page.cgi?id=fields.html#status
Gyuyoung Kim
Comment 3 2013-04-01 03:35:26 PDT
LGTM. You need to get WK2 owner's sign off.
Gyuyoung Kim
Comment 4 2013-04-01 03:37:11 PDT
BTW, I wonder if this patch is only for EFL port. It looks this patch will be influence on other ports as well.
Ed Bartosh
Comment 5 2013-04-01 03:59:52 PDT
Changing to WK2 as suggested.
Alexey Proskuryakov
Comment 6 2013-04-02 14:31:29 PDT
Comment on attachment 195816 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=195816&action=review > Source/WebKit2/ChangeLog:3 > + [EFL] --no-tiled-backing-store build fails because FloatPoint is not declared Please fix the prefix here to match the bug title.
Ed Bartosh
Comment 7 2013-04-04 13:55:27 PDT
Created attachment 196522 [details] Patch Alexey, thank you for review. I'm sorry for the delay. I've missed your comment somehow. Updated the patch according to your suggestion.
Ed Bartosh
Comment 8 2013-04-05 13:53:27 PDT
Simon, can you please review this really small one?
Simon Fraser (smfr)
Comment 9 2013-04-05 14:07:18 PDT
Comment on attachment 196522 [details] Patch Please just forward-declare to avoid extra includes.
Alexey Proskuryakov
Comment 10 2013-04-05 15:13:39 PDT
Good point, I don't know what I was thinking when saying r+.
Ed Bartosh
Comment 11 2013-04-05 15:26:54 PDT
Ed Bartosh
Comment 12 2013-04-05 15:28:01 PDT
Updated according to reviewer's suggestion. Please review.
WebKit Commit Bot
Comment 13 2013-04-05 17:47:49 PDT
Comment on attachment 196690 [details] Patch Clearing flags on attachment: 196690 Committed r147823: <http://trac.webkit.org/changeset/147823>
WebKit Commit Bot
Comment 14 2013-04-05 17:47:53 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.