[WK2] --no-tiled-backing-store build fails because FloatPoint is not declared https://bugs.webkit.org/show_bug.cgi?id=113618

Patch by Ed Bartosh <bartosh@gmail.com> on 2013-04-05
Reviewed by Simon Fraser.

* WebProcess/Plugins/Plugin.h: Forward declared FloatPoint

Canonical link: https://commits.webkit.org/132452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147823 268f45cc-cd09-0410-ab3c-d52691b4dbfc